--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ background-color: pink;
     height: 100%;
     width: 80%;
     
-   background-color: orange;
+   
    
  
   
@@ -226,4 +226,13 @@ h3{
     
     z-index: 1;
     background-color:blueviolet;
+}
+
+#nature1{
+    width: 50%;
+    height: 60vh;
+    margin-top: 100px;
+    margin-right: 100px;
+    z-index: -1;
+    position: absolute;
 }
