--- a/css/style.css
+++ b/css/style.css
@@ -272,8 +272,8 @@ h3{
     justify-content: center;
     height: 15vh;
     width: 100%;
-    background: rgb(255,255,255);
-background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(81,36,237,1) 16%, rgba(48,41,235,1) 29%, rgba(31,67,199,1) 36%, rgba(30,6,230,1) 60%, rgba(119,103,223,1) 70%, rgba(88,40,224,1) 90%, rgba(255,255,255,1) 100%);
+    /* background: rgb(255,255,255);
+background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(81,36,237,1) 16%, rgba(48,41,235,1) 29%, rgba(31,67,199,1) 36%, rgba(30,6,230,1) 60%, rgba(119,103,223,1) 70%, rgba(88,40,224,1) 90%, rgba(255,255,255,1) 100%); */
 }
 
 #nature1{
@@ -306,7 +306,7 @@ background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(81,36,237,1) 16%,
     margin-left: 900px;
     z-index: -1;
     position: absolute;
-    clip-path: circle(40%);
+    clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
     object-fit: contain;
     object-position: 40% 100%;
 }
@@ -400,3 +400,70 @@ background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(81,36,237,1) 16%,
     animation: blink 1s step-start 0s infinite;
     
  }
+
+ h5{
+    position: absolute;
+    font-family: 'wavy';
+    font-weight: 200;
+    font-size: 24px;
+    margin-top: 0px;
+    margin-right: 700px;
+    margin-left: 800px;
+    margin-bottom: 300px;
+   
+
+ }
+
+ h6{
+    position: absolute;
+    font-family: 'wavy';
+    font-weight: 200;
+    font-size: 24px;
+    margin-top: 0px;
+    margin-right: 700px;
+    margin-left: 420px;
+    margin-bottom: 150px;
+  
+ }
+
+ 
+ h7{
+    position: absolute;
+    font-family: 'wavy';
+    font-weight: 200;
+    font-size: 24px;
+    margin-top: 0px;
+    margin-right: 700px;
+    margin-left: 90px;
+    margin-bottom: 50px;
+
+
+ }
+
+ #circle1 {
+    width: 50px;
+    height: 50px;
+    background: red;
+    border-radius: 50%;
+    z-index: 1;
+    position: absolute;
+    margin-top: 100px;
+    margin-right: 900px;
+    background: rgb(63,94,251);
+background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+opacity: 0;
+animation: new-item-animation 3s linear forwards infinite;
+}
+
+@keyframes new-item-animation {
+from {
+    opacity: 0;
+    transform: translateY(-400px);
+}
+
+to {
+    opacity: 1;
+    transform : translateY(400px);
+}
+}
+  
