--- a/css/about.css
+++ b/css/about.css
@@ -2,19 +2,17 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box; /* Ensures padding and borders are included in width/height */
 }
 
 canvas{
     display: block;
 }
 
-body{
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: contain;
+style {
+    object-fit: cover;
 }
+
 
 @font-face {
     font-family: 'Fourmi';
@@ -25,6 +23,16 @@ body{
   
   }
 
+
+
+  @font-face {
+    font-family: 'Tiltortion';
+    src: url('../media/fonts/Tiltortion copy.otf') format('otf');
+    
+    font-weight: normal;
+    font-style: normal;
+  
+  }
 
   @font-face {
     font-family: 'stairs';
@@ -61,7 +69,8 @@ a{
 }
 
 a:hover{
-    color: yellow;
+    background-color: aqua;
+    padding: 10px;
 }
 
 #three-body{
@@ -76,25 +85,18 @@ a:hover{
    
 }
 
-#archive:hover{
-    background-color: fuchsia;
-}
+
 
 #blog{
   font-size: 30px;
 }
 
-#blog:hover{
-    background-color: fuchsia;
-}
+
 
 #about{
   font-size: 30px;
 }
 
-#about:hover{
-   background-color: fuchsia;
-}
 
 
 
@@ -138,8 +140,9 @@ a:hover{
     flex-wrap: nowrap;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
-    width: 60%;
+    height: 30vh;
+    width: 90%;
+ 
  
   
 }
@@ -147,11 +150,52 @@ a:hover{
 
 
 h1{
-    font-family:"stairs", serif;
-    font-size: 80px;
+    font-family:"Tiltortion", san-serif;
+    font-size: 120px;
     position: absolute;
     margin-top: 50px;
+    margin-left: 10px;
+    margin-right: 500px;
+    letter-spacing: 15px;
+    color: aqua;
 }
+
+h2{
+    font-family:"Tiltortion", san-serif;
+    font-size: 120px;
+    position: absolute;
+    margin-top: 200px;
+    margin-left: 10px;
+    margin-right: 200px;
+    letter-spacing: 15px;
+    color: aqua;
+}
+
+
+h3{
+    font-family:"Tiltortion", san-serif;
+    font-size: 120px;
+    position: absolute;
+    margin-top: 350px;
+    margin-left: 10px;
+    margin-right: 10px;
+    letter-spacing: 15px;
+    color: aqua;
+}
+
+
+h4{
+    font-family:"Tiltortion", san-serif;
+    font-size: 120px;
+    position: absolute;
+    margin-top: 500px;
+    margin-bottom: 100px;
+    margin-left: 200px;
+    margin-right: 10px;
+    letter-spacing: 15px;
+    color: aqua;
+}
+
 
 
 #image-desktop{
@@ -159,70 +203,4 @@ h1{
     height: 70vh;
 }
 
-
-.scrollbar-inner{
-    background-color: hotpink;
-    width: 100%;
-
-}
-
-.scrollbar-inner2{
-    background-color: yellow;
-}
-
-
-.scrollbar-inner3{
-    background-color: lightskyblue;
-}
-
-
-.scrollbar-inner4{
-    background-color: orange;
-}
-
-.scrollbar-inner5{
-    background-color: lime;
-}
-
-.scrollbar-inner6{
-    background-color: magenta;
-}
-
-.scrollbar-inner7{
-    background-color: cyan;
-}
-
-header{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'zaltys', sans-serif;
-    font-size: 80px;
-    letter-spacing: 30px;
-    z-index: -1;
-}
-
-.scrollbar {
-    display: flex;
-    overflow: hidden; /* Hide the overflow to ensure the scrolling looks clean */
-    width: 100%; /* Full width to ensure it stretches across the screen */
-    animation: scroll 20s linear infinite;
-    object-fit: contain;
-}
-
-
-/* 
-.scrollbar-inner > div {
-    margin-right: 50px; 
-} */
-
-/* Animation Keyframes */
-@keyframes scroll {
-    from {
-        transform: translateX(100%); /* Start position off-screen to the right */
-    }
-    to {
-        transform: translateX(-100%); /* End position off-screen to the left */
-    }
-}
 
