--- a/css/blog.css
+++ b/css/blog.css
@@ -55,13 +55,16 @@ style {
 
 a{
     text-decoration: none;
-    color: #FFB6C1;
+    color: #6F4E37;
 }
 
+a:hover{
+   background-color: greenyellow;
+}
 
 #archive{
     font-size: 30px;
-    padding: 100px;
+    padding: 20px;
  }
  
 #archive:hover{
@@ -71,7 +74,7 @@ a{
  
  #blog{
    font-size: 30px;
-   padding: 100px;
+   padding: 20px;
  }
  
 #blog:hover{
@@ -79,7 +82,7 @@ a{
 
  #about{
    font-size: 30px;
-   padding: 100px;
+   padding: 20px;
  }
  
 #about:hover{
@@ -102,7 +105,7 @@ a{
 h1{
     font-family: "Tiltortion", sans-serif;
     font-size: 26px;
-    color: #FFB6C1;
+    color: #6F4E37;
    padding-top: 2px;
    margin-bottom: -20px;
    animation: blink 1s infinite;
@@ -124,7 +127,7 @@ h1{
 h2{
     font-family: "Tiltortion", san-serif;
     font-size: 28px;
-    color: #FFB6C1;
+    color: #6F4E37;
    padding-top: 2px;
    margin-bottom: -20px;
  
@@ -141,7 +144,7 @@ p{
     flex-wrap: wrap;
     height: auto;
     flex-direction: row;
-    color: #FFB6C1;
+    color: #6F4E37;
     width: 100%;
     
 }
@@ -154,7 +157,7 @@ p{
     align-items: center;
  /* justify-content: space-around; */
  font-family: 'fourmi', sans-serif;
-  color: #FFB6C1; 
+  color: #6F4E37; 
   border: 3px solid #FFB6C1; 
 }
 
