--- a/css/about.css
+++ b/css/about.css
@@ -11,6 +11,7 @@ canvas{
 
 style {
     object-fit: cover;
+    object-fit: contain;
 }
 
 body{
@@ -116,16 +117,31 @@ a:hover{
 
 .flex-container3{
     display: flex;
-    flex-direction: column;
-    width: 10%;
-    height: 100vh;
+    flex-direction: row;
+    width: 100%;
+    height: 4vh;
     align-items: center;
  justify-content: space-around;
- font-family: 'fourmi', sans-serif;
+ font-family: 'Archivo Narrow', sans-serif;
+ z-index: 1;
+background-color: #E1E1E1;
     
 }
 
-
+.bottom-header{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 4vh;
+    align-items: center;
+ justify-content: space-around;
+ font-family: 'Archivo Narrow', sans-serif;
+ z-index: 1;
+position: fixed;
+bottom: 0px;
+margin-right: auto;
+margin-left: auto;
+background-color: #E1E1E1;}
 
 .flex-container {
     display: flex;
@@ -154,7 +170,6 @@ a:hover{
 }
 
 
-
 h1{
     font-family:"Tiltortion", san-serif;
     font-size: 200px;
@@ -168,15 +183,22 @@ h1{
 
 h2{
     font-family:"Tiltortion", san-serif;
-    font-size: 200px;
+    font-size: 100px;
     position: absolute;
-    margin-top: 180px;
+    letter-spacing: 15px;
+    
+}
+
+p{
+    font-family:"Tiltortion", san-serif;
+    font-size: 50px;
+    position: absolute;
+    margin-top: 200px;
     margin-left: 10px;
-    margin-right: 200px;
+    margin-right: 10px;
     letter-spacing: 15px;
     color: aqua;
 }
-
 
 h3{
     font-family:"Tiltortion", san-serif;
@@ -268,4 +290,103 @@ h4{
     margin-right: 700px;
     margin-bottom: 100px;
     z-index:100;
+}
+
+.scrollbox{
+    display: flex;
+    background-color: lightblue;
+    width: 600px;
+    height: 400px;
+    overflow: scroll;
+    position: absolute;
+    margin-top: 200px;
+    margin-left: 400px;
+    z-index: 1;
+   box-shadow:10px 10px 5px #888888;
+    scrollbar-color: gray;
+    scrollbar-width: thick;
+}
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: orange;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: blue;
+ 
+    border: 3px solid orange;
+  }
+
+  #kiwi{
+    width: 10%;
+    height: 20%;
+    position: absolute;
+    margin-top: 400px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 0px;
+    z-index: 0;
+    animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+#strawberry{
+    width: 20%;
+    height: 20%;
+    position: absolute;
+    margin-top: 20px;
+    margin-left: 300px;
+    margin-right: 500px;
+    margin-bottom: 0px;
+    z-index: 0;
+    animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
+#computer{
+    width: 20%;
+    height: 20%;
+    position: absolute;
+    margin-top: 20px;
+    margin-left: 300px;
+    margin-right: 500px;
+    margin-bottom: 0px;
+    z-index: 0;
+    
+}
+
+table {
+    width: 20%;
+    height: 40%;
+    border-collapse: collapse;
+    background: yellow;
+    color: black;
+    /* position: absolute; */
+    
+}
+th, td { 
+    font-weight: bold;
+    font-family: "courier";
+    font-weight: 100;
 }
