--- a/css/about.css
+++ b/css/about.css
@@ -58,6 +58,14 @@ body{
   
   }
 
+  @font-face {
+    font-family: 'Medium';
+    src: url('../media/fonts/Medium copy.otf') format('otf');
+    
+    font-weight: normal;
+    font-style: normal;
+  
+  }
 
 
 #three-body{
@@ -75,7 +83,7 @@ a{
 }
 
 a:hover{
-    background-color: aqua;
+    color: aqua;
     padding: 10px;
 }
 
@@ -119,7 +127,7 @@ a:hover{
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 4vh;
+    height: 5vh;
     align-items: center;
  justify-content: space-around;
  font-family: 'Archivo Narrow', sans-serif;
@@ -132,7 +140,7 @@ background-color: #E1E1E1;
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 4vh;
+    height: 5vh;
     align-items: center;
  justify-content: space-around;
  font-family: 'Archivo Narrow', sans-serif;
@@ -172,7 +180,7 @@ background-color: #E1E1E1;}
 
 h1{
     font-family:"Tiltortion", san-serif;
-    font-size: 200px;
+    font-size:60px;
     position: absolute;
     margin-top: 0px;
     margin-left: 10px;
@@ -183,21 +191,19 @@ h1{
 
 h2{
     font-family:"Tiltortion", san-serif;
-    font-size: 100px;
+    font-size: 40px;
     position: absolute;
     letter-spacing: 15px;
     
 }
 
 p{
-    font-family:"Tiltortion", san-serif;
-    font-size: 50px;
+    font-family:"quicksand", san-serif;
+    font-size: 20px;
     position: absolute;
     margin-top: 200px;
     margin-left: 10px;
     margin-right: 10px;
-    letter-spacing: 15px;
-    color: aqua;
 }
 
 h3{
@@ -321,6 +327,25 @@ h4{
     border: 3px solid orange;
   }
 
+
+  .container {
+    display: grid;
+    align-items: center; 
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 5px;
+   }
+   
+   img {
+     max-width: 100%;
+     max-height:100%;
+   }
+   
+   .text {
+     font-size: 70px;
+   }
+
+
+
   #kiwi{
     width: 10%;
     height: 20%;
@@ -363,6 +388,27 @@ h4{
     }
 }
 
+#orange{
+    width: 10%;
+    height: 20%;
+    position: absolute;
+    margin-top: 500px;
+    margin-left: 1100px;
+    margin-right: 10px;
+    margin-bottom: 0px;
+    z-index: 0;
+    animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 
 #computer{
     width: 20%;
@@ -382,11 +428,79 @@ table {
     border-collapse: collapse;
     background: yellow;
     color: black;
-    /* position: absolute; */
+margin-top: 10px;
+    margin-left: 320px;
     
 }
 th, td { 
     font-weight: bold;
     font-family: "courier";
     font-weight: 100;
+}
+
+#square1{
+    width: 20px;
+    height: 20px;
+    background-color: yellow;
+    position: absolute;
+    z-index: 1;
+    margin-top: 650px;
+    margin-left: 1300px;
+    
+}
+
+#square2{
+    width: 20px;
+    height: 20px;
+    background-color: hotpink;
+    position: absolute;
+    z-index: 1;
+    margin-top: 650px;
+    margin-left: 1280px;
+    
+}
+
+#square3{
+    width: 20px;
+    height: 20px;
+    background-color: cyan;
+    position: absolute;
+    z-index: 1;
+    margin-top: 650px;
+    margin-left: 1260px;
+    
+}
+
+#square4{
+    width: 20px;
+    height: 20px;
+    background-color: orange;
+    position: absolute;
+    z-index: 1;
+    margin-top: 650px;
+    margin-left: 1240px;
+    
+}
+
+#square5{
+    width: 50px;
+    height: 20px;
+    background-color: black;
+    position: absolute;
+    z-index: 1;
+    margin-top: 650px;
+    margin-left: 1320px;
+    
+}
+
+audio{
+    width: 20%;
+    height: 20%;
+    position: absolute;
+    margin-top: 50px;
+    margin-left: 600px;
+    margin-right: 500px;
+    margin-bottom: 0px;
+    z-index: 0;
+    
 }
