--- a/css/about.css
+++ b/css/about.css
@@ -130,7 +130,7 @@ a:hover{
     height: 5vh;
     align-items: center;
  justify-content: space-around;
- font-family: 'Archivo Narrow', sans-serif;
+ font-family: 'Archivo new', sans-serif;
  z-index: 1;
 background-color: #E1E1E1;
     
@@ -143,7 +143,7 @@ background-color: #E1E1E1;
     height: 5vh;
     align-items: center;
  justify-content: space-around;
- font-family: 'Archivo Narrow', sans-serif;
+ font-family: 'Archivo New', sans-serif;
  z-index: 1;
 position: fixed;
 bottom: 0px;
@@ -180,11 +180,9 @@ background-color: #E1E1E1;}
 
 h1{
     font-family:"Tiltortion", san-serif;
-    font-size:60px;
+    font-size:120px;
     position: absolute;
-    margin-top: 0px;
     margin-left: 10px;
-    margin-right:200px;
     letter-spacing: 15px;
     color: aqua;
 }
@@ -197,13 +195,10 @@ h2{
     
 }
 
-p{
-    font-family:"quicksand", san-serif;
-    font-size: 20px;
-    position: absolute;
-    margin-top: 200px;
-    margin-left: 10px;
-    margin-right: 10px;
+.text{
+    font-family:"source code pro", san-serif;
+    font-size: 18px;
+
 }
 
 h3{
@@ -328,21 +323,6 @@ h4{
   }
 
 
-  .container {
-    display: grid;
-    align-items: center; 
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 5px;
-   }
-   
-   img {
-     max-width: 100%;
-     max-height:100%;
-   }
-   
-   .text {
-     font-size: 70px;
-   }
 
 
 
@@ -409,6 +389,27 @@ h4{
     }
 }
 
+#lemon{
+    width: 10%;
+    height: 20%;
+    position: absolute;
+    margin-top: 100px;
+    margin-left: 1000px;
+    margin-right: 10px;
+    margin-bottom: 0px;
+    z-index: 0;
+    animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 
 #computer{
     width: 20%;
@@ -430,6 +431,7 @@ table {
     color: black;
 margin-top: 10px;
     margin-left: 320px;
+    
     
 }
 th, td { 
