--- a/css/about.css
+++ b/css/about.css
@@ -185,6 +185,7 @@ h1{
     margin-left: 10px;
     letter-spacing: 15px;
     color: aqua;
+    margin-bottom: 50px;
 }
 
 h2{
@@ -505,4 +506,17 @@ audio{
     margin-bottom: 0px;
     z-index: 0;
     
+}
+
+.text{
+    font-family:"source code pro", san-serif;
+    font-size: 18px;
+    position: absolute;
+    margin-top: 50px;
+    text-align: justify;
+  text-justify: inter-word;
+    margin-bottom: 0px;
+    margin-left: 30px;
+    margin-right: 30px;
+    z-index: 0;
 }
