--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
 }
 
+
 canvas{
     display: block;
 }
@@ -109,7 +110,9 @@ a:hover{
     height: 100%;
     margin: 0 auto;
     z-index: 1;
+    
 }
+
 
 
 
@@ -117,7 +120,7 @@ a:hover{
 .parent-container {
     display: flex;
     flex-wrap: wrap;
-    height: auto;
+   margin: 0;
     flex-direction: row;
     width: auto;
     
@@ -125,16 +128,16 @@ a:hover{
 
 .flex-container3{
     display: flex;
-    flex-direction: column;
-    width: 5%;
-    height: 4vh;
-    align-items: center;
- justify-content: space-around;
+    flex-direction: row;
+    width: 100%;
+    height: auto;
+
  z-index: 10;
- padding: 10px;
- font-size: 18px;
+ font-size: 24px;
  color: white;
- font-family: "ZTNeueRalewe-Regular", serif;
+ font-family: "Archivo Narrow", san-serif;
+ font-weight: 400;
+ justify-content: space-around;
 
 
     
@@ -154,23 +157,6 @@ margin-right: auto;
 margin-left: auto;
 background-color: #E1E1E1;}
 
-.flex-container {
-    display: flex;
-    flex-wrap: nowrap;
-    align-items: center;
-    flex-direction: row;
-    justify-content: center;
-    height: 100vh;
-    width: 90%;
-
- 
-   
-   
- 
-  
-    
-   
-}
 
 
 
@@ -180,7 +166,7 @@ h2{
     position: absolute;
     font-family: 'Archivo Narrow', sans-serif;
     font-weight: 100;
-    margin-top: 1100px;
+    margin-top: 500px;
     color: #FFFC9C;
     border: 2px solid #FFFC9C;
     padding: 5px;
@@ -196,7 +182,7 @@ h1{
 font-weight: 400;
   color: #FFFC9C;
   position: absolute;
-    margin-top: 600px;
+    margin-top: 20px;
     text-shadow: -1px -1px black;
     letter-spacing: 5px;
  
@@ -209,7 +195,7 @@ h4{
 font-weight: 400;
   color: #FFFC9C;
   position: absolute;
-    margin-top: 870px;
+    margin-top: 270px;
     margin-left: 650px;
     text-shadow: -1px -1px black;
     letter-spacing: 5px;
@@ -221,13 +207,22 @@ h3{
     font-size: 220px;
     color: red;
     position: absolute;
-    margin-top: 800px;
+    margin-top: 200px;
     margin-left: 100px;
     margin-right: 500px;
     text-shadow: -2px -2px black;
     letter-spacing: 5px;
     z-index: 1;
 
+}
+
+h5{
+  font-family: "pinyon script", serif;
+  font-size: 20px;
+  color: red;
+  position: absolute;
+  margin-top: 1000px;
+  margin-left: 100px;
 }
 
 p{
@@ -242,31 +237,29 @@ p{
  
 }
 
-h5{
-    font-size: 24px;
+/* h5{
     position: absolute;
-    font-family: 'Archivo Narrow', sans-serif;
-    font-weight: 100;
-    margin-top: 10px;
-    color: white;
-    text-align: center;
-    
-}
+    font-family: 'wavy';
+    font-weight: 200;
+    font-size: 14px;
+    margin-left: 100px;
+
+ } */
 
 
-
-
-.flex-container2{
+.flex-container{
     display: flex;
+    margin: 0;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    height: 15vh;
+    height: auto;
     width: 100%;
-    /* background: rgb(255,255,255);
-background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(81,36,237,1) 16%, rgba(48,41,235,1) 29%, rgba(31,67,199,1) 36%, rgba(30,6,230,1) 60%, rgba(119,103,223,1) 70%, rgba(88,40,224,1) 90%, rgba(255,255,255,1) 100%);
-} */
+ height: auto;
+ 
+
 }
+
 #nature1{
     width: 10%;
     height: 40vh;
@@ -279,28 +272,7 @@ background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(81,36,237,1) 16%,
     object-position: 10% 100%;
 }
 
-#nature2{
-    width: 20%;
-    height: 40vh;
-    margin-top: 300px;
-    margin-left: 600px;
-    z-index: -1;
-    position: absolute;
-    clip-path: xywh(0 5px 100% 75% round 15% 0);
-    object-fit: cover;
-}
 
-#nature3{
-    width: 10%;
-    height: 10vh;
-    margin-top: 200px;
-    margin-left: 900px;
-    z-index: -1;
-    position: absolute;
-    clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
-    object-fit: contain;
-    object-position: 40% 100%;
-}
 
 #heart {
     position: absolute;
@@ -392,44 +364,11 @@ background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(81,36,237,1) 16%,
     
  }
 
- h5{
-    position: absolute;
-    font-family: 'wavy';
-    font-weight: 200;
-    font-size: 24px;
-    margin-top: 0px;
-    margin-right: 700px;
-    margin-left: 800px;
-    margin-bottom: 300px;
-   
 
- }
 
- h6{
-    position: absolute;
-    font-family: 'wavy';
-    font-weight: 200;
-    font-size: 24px;
-    margin-top: 0px;
-    margin-right: 700px;
-    margin-left: 420px;
-    margin-bottom: 150px;
-  
- }
 
  
- h7{
-    position: absolute;
-    font-family: 'wavy';
-    font-weight: 200;
-    font-size: 24px;
-    margin-top: 0px;
-    margin-right: 700px;
-    margin-left: 90px;
-    margin-bottom: 50px;
 
-
- }
 
  #circle1 {
     width: 50px;
