--- a/css/about.css
+++ b/css/about.css
@@ -302,7 +302,7 @@ h4{
     overflow: scroll;
     position: absolute;
     margin-top: 200px;
-    margin-left: 400px;
+    margin-left: 500px;
     z-index: 1;
    box-shadow:10px 10px 5px #888888;
     scrollbar-color: gray;
@@ -324,7 +324,12 @@ h4{
   }
 
 
-
+#text{
+    position: absolute;
+    margin-top: 200px;
+    margin-left: 0px;
+    margin-right: 500px;
+}
 
 
   #kiwi{
@@ -519,4 +524,35 @@ audio{
     margin-left: 30px;
     margin-right: 30px;
     z-index: 0;
+}
+
+@media (max-width: 768px) {
+    h1 {
+        font-size: 60px;
+        letter-spacing: 5px;
+    }
+
+    h2 {
+        font-size: 30px;
+    }
+
+    .parent-container, .flex-container3, .bottom-header {
+        flex-direction: column;
+    }
+
+    .flex-container, .flex-container2 {
+        width: 100%;
+    }
+
+    .scrollbox {
+        width: 90%;
+        height: auto;
+        margin: 20px auto;
+    }
+
+    #kiwi, #strawberry, #orange, #lemon {
+        width: 20%;
+        height: auto;
+        margin: 10px auto;
+    }
 }
