--- a/css/style.css
+++ b/css/style.css
@@ -1,409 +1,437 @@
-/* CSS Reset */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 
 canvas{
-    display: block;
-}
-
-body{
-   
-    overflow-x: hidden;
-    overflow-y: hidden;
-    /* background-attachment: fixed;
-    background-size: contain; */
-}
-
-style{
-    object-fit: cover;
-    object-fit: contain;
-}
-@font-face {
-    font-family: 'Fourmi';
-    src: url('../media/fonts/FOURMI-light2.otf') format('otf');
-    
-    font-weight: normal;
-    font-style: normal;
-  
-  }
-
-  @font-face {
-    font-family: 'FT88';
-    src: url('../media/fonts/FT88-School copy.otf') format('otf');
-    
-    font-weight: normal;
-    font-style: normal;
-  
-  }
-
-  @font-face {
-    font-family: 'Hellplague';
-    src: url('../media/fonts/hellplague.otf') format('otf');
-    
-    font-weight: normal;
-    font-style: normal;
-  
-  }
-
-
-  @font-face {
-    font-family: 'stairs';
-    src: url('../media/fonts/Stairs.otf') format('otf');
-    
-    font-weight: normal;
-    font-style: normal;
-  
-  }
-
-  @font-face {
-    font-family: 'squaredshadow';
-    src: url('../media/fonts/SquaredShadow.otf') format('otf');
-    
-    font-weight: normal;
-    font-style: normal;
-  
-  }
-
-
-  @font-face {
-    font-family: 'wavy';
-    src: url('../media/fonts/wavy.otf') format('otf');
-    
-    font-weight: normal;
-    font-style: normal;
-  
-  }
-
-  @font-face {
-    font-family: 'ZTNeueRalewe-Regular';
-    src: url('../media/fonts/ZTNeueRalewe-Regular copy.ttf') format('ttf');
-    font-weight: normal;
-    font-style: normal;
-  
-  }
-
-  @font-face {
-    font-family: 'ZTNeueRalewe-Black';
-    src: url('../media/fonts/ZTNeueRalewe-Black copy.ttf') format('ttf');
-    font-weight: bold;
-    font-style: normal;
-  
-  }
-
-
-a{
-    text-decoration: none;
-  color: white;
-    
-}
-
-a:hover{
-    color: yellow;
+  display:block;
 }
 
 #three-body{
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-    z-index: 1;
-    
+  width: 100%;
+  height: 90%;
+  margin: 0 auto;
+  /* z-index: 1; */
 }
 
+@font-face {
+  font-family: 'Hellplague';
+  src: url('../media/fonts/hellplague.otf') format('otf');
+  
+  font-weight: normal;
+  font-style: normal;
 
+}
+
+@font-face {
+  font-family: 'Medium';
+  src: url('../media/fonts/Medium copy.otf') format('otf');
+  
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'Tiltortion';
+  src: url('../media/fonts/Tiltortion.otf') format('otf');
+  
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+style {
+  object-fit: cover;
+  object-fit: contain;
+}
+
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+/* 
+.flex-container3{
+  display: flex;
+  flex-direction: row;
+  height: 5vh;
+  width: 100vw;
+  font-family: "Raleway", sans-serif;
+  border-radius: 10px 10px 10px 10px;
+} */
 
 
 
 .parent-container {
-    display: flex;
-    flex-wrap: wrap;
-   margin: 0;
-    flex-direction: row;
-    width: auto;
-    
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+  flex-direction: row;
+ 
+  
 }
 
 .flex-container3{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: auto;
+  display: flex;
+  flex-direction: column;
+  width: 5%;
+  height: 8vh;
+  align-items: center;
+/* justify-content: space-around; */
+font-family: 'quicksand', sans-serif;
+z-index: 1;
+font-size: 20px;
+margin-top: 100px;
+background-color: yellow;
+position: absolute;
+margin-left: 100px;
 
- z-index: 10;
- font-size: 24px;
- color: white;
- font-family: "Archivo Narrow", san-serif;
- font-weight: 400;
- justify-content: space-around;
 
-
-    
+  
 }
-.bottom-header{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 4vh;
-    align-items: center;
- justify-content: space-around;
- font-family: 'Archivo Narrow', sans-serif;
- z-index: 1;
-position: fixed;
-bottom: 0px;
-margin-right: auto;
-margin-left: auto;
-background-color: #E1E1E1;}
+
+
+a{
+  text-decoration: none;
+  color: black;
+
+}
+
+a:hover{
+font-size: 20px;
+box-shadow: 5px 5px 5px #CC0066;
+}
+
+
+
+
+.flex-container{
+  display: flex;
+  justify-content: center;
+
+  height:auto;
+  width:90%;
+  margin-top: auto;
+  position: absolute;
+  margin-left: 100px;
+  margin-right: 500px;
+  
+ 
+
+ 
+
+}
+
+
+#hello{
+  position: absolute;
+  color: #CC0066;
+  font-family: "Medium", san-serif;
+  font-size: 70px;
+  justify-content: center;
+ margin-top: 100px;
+  z-index: -1;
+
+  
+
+}
+
+
+
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
+
+
+@keyframes blink {
+  0% { opacity: 0; }
+  50% { opacity: 0.5; }
+  100% { opacity: 1; }
+}
+
+@keyframes slidein {
+  0% { left: -150%; }
+  50% { left: 50%; }
+  100% { left: 150%; }
+}
+
+
+@keyframes slidein2 {
+  0% { left: 150%; }
+  50% { left: 50%; }
+  100% { left: -150%; }
+
+}
+
 
 
 
 
 
 h2{
-    font-size: 24px;
-    position: absolute;
-    font-family: 'Archivo Narrow', sans-serif;
-    font-weight: 100;
-    margin-top: 500px;
-    color: #FFFC9C;
-    border: 2px solid #FFFC9C;
-    padding: 5px;
-    box-shadow:10px 10px 5px #888888;
- 
- 
+  color: #CC0066;
+  font-family: "Medium", san-serif;
+  font-size: 32px;
+  display: flex;
+  justify-content: center;
+  margin-right: auto;
+  position: absolute;
+  margin-top:50px;
+  z-index: 1;
+  font-weight: 300;
+
+  
+
+
 }
 
+h3{
+  color: black;
+  font-family: "quicksand", san-serif;
+  font-weight: 100;
+  font-size: 18px;
+  display: flex;
 
-h1{
-    font-family:"Jacquarda Bastarda 9", static;
-    font-size: 160px;
-font-weight: 400;
-  color: #FFFC9C;
+  margin-right: 150px;
+  margin-left: 180px;
   position: absolute;
-    margin-top: 20px;
-    text-shadow: -1px -1px black;
-    letter-spacing: 5px;
- 
+  margin-top: 160px;
+  background-color: yellow;
+}
+
+h7{
+  color: black;
+  font-family: "quicksand", san-serif;
+  font-weight: 100;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  margin-right: 100px;
+  margin-left: 250px;
+  position: absolute;
+  margin-top: 520px;
+  background-color: yellow;
 }
 
 
 h4{
-    font-family:"Jacquarda Bastarda 9", static;
-    font-size: 160px;
-font-weight: 400;
-  color: #FFFC9C;
+  color: black;
+  font-family: "Quicksand", san-serif;
+  font-weight: 300;
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+  margin-right: 100px;
+  margin-left: 1000px;
   position: absolute;
-    margin-top: 270px;
-    margin-left: 650px;
-    text-shadow: -1px -1px black;
-    letter-spacing: 5px;
- 
+  margin-top: 160px;
+  animation: scroll 15s linear infinite;
 }
 
-h3{
-    font-family: "pinyon script", serif;
-    font-size: 220px;
-    color: red;
-    position: absolute;
-    margin-top: 200px;
-    margin-left: 100px;
-    margin-right: 500px;
-    text-shadow: -2px -2px black;
-    letter-spacing: 5px;
-    z-index: 1;
-
+@keyframes scroll {
+  from {
+      transform: translateY(100%);
+  }
+  to {
+      transform: translateY(-100%);
+  }
 }
+
+
 
 h5{
-  font-family: "pinyon script", serif;
-  font-size: 20px;
-  color: red;
+  color: black;
+  font-family: "Quicksand", san-serif;
+  font-weight: 300;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  margin-right: 10px;
+ margin-left: 750px;
   position: absolute;
-  margin-top: 1000px;
-  margin-left: 100px;
-}
-
-p{
-    font-size: 18px;
-    position: absolute;
-    font-family: 'Archivo Narrow', sans-serif;
-    font-weight: 100;
-    margin-top: 300px;
-    color: white;
-    text-align: center;
-    padding: 100px;
- 
-}
-
-/* h5{
-    position: absolute;
-    font-family: 'wavy';
-    font-weight: 200;
-    font-size: 14px;
-    margin-left: 100px;
-
- } */
-
-
-.flex-container{
-    display: flex;
-    margin: 0;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    height: auto;
-    width: 100%;
- height: auto;
- 
+  margin-top: 620px;
+  background-color: yellow;
 
 }
 
-#nature1{
-    width: 10%;
-    height: 40vh;
-    margin-bottom: 100px;
-    margin-right: 600px;
-    z-index: -1;
-    position: absolute;
-    clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
-    object-fit: cover;
-    object-position: 10% 100%;
-}
-
-
-
-#heart {
-    position: absolute;
-    width: 300px;
-    height: 150px;
-    margin-top: 100px;
-    margin-left: 900px;
-    z-index: -1;
-  }
-  #heart:before,
-  #heart:after {
-    position: absolute;
-    content: "";
-    left: 50px;
-    top: 0;
-    width: 50px;
-    height: 80px;
-    background: #CC3366;
-    border-radius: 50px 50px 0 0;
-    transform: rotate(-45deg);
-    transform-origin: 0 100%;
-    z-index: -1;
-  }
-  #heart:after {
-    left: 0;
-    transform: rotate(45deg);
-    transform-origin: 100% 100%;
-    z-index:-1;
-  }
-
- #eye1{
-    width: 25px;
-    height: 25px;
-    background: white;
-    border-radius: 50%;
-    z-index: 100;
-    position: absolute;
-    margin-bottom: 130px;
-    margin-right: 600px;
-    margin-left: 20px;
-    margin-top: 15px;
- }
-
-
- #pupil1{
-    width: 15px;
-    height: 15px;
-    background: black;
-    border-radius: 50%;
-    z-index: 100;
-    position: absolute;
-    margin-bottom: 130px;
-    margin-right: 600px;
-    margin-left: 20px;
-    margin-top: 15px;
-    animation: blink 1s step-start 0s infinite;
- }
-
-@keyframes blink{
-    50% {
-        opacity: 0.0;}}
-
- #eye2{
-    width: 25px;
-    height: 25px;
-    background: white;
-    border-radius: 50%;
-    z-index: 100;
-    position: absolute;
-    margin-bottom: 130px;
-    margin-right: 600px;
-    margin-left: 55px;
-    margin-top: 15px;
-    
- }
-
- #pupil2{
-    width: 15px;
-    height: 15px;
-    background: black;
-    border-radius: 50%;
-    z-index: 100;
-    position: absolute;
-    margin-bottom: 130px;
-    margin-right: 600px;
-    margin-left: 55px;
-    margin-top: 15px;
-    animation: blink 1s step-start 0s infinite;
-    
- }
-
-
-
-
- 
-
-
- #circle1 {
-    width: 50px;
-    height: 50px;
-    background: red;
-    border-radius: 50%;
-    z-index: 1;
-    position: absolute;
-    margin-top: 100px;
-    margin-right: 900px;
-    background: rgb(63,94,251);
-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
-opacity: 0;
-animation: new-item-animation 3s linear forwards infinite;
-}
-
-@keyframes new-item-animation {
-from {
-    opacity: 0;
-    transform: translateY(-400px);
-}
-
-to {
-    opacity: 1;
-    transform : translateY(400px);
-}
-}
+h6{
+  color: black;
+  font-family: "Quicksand", san-serif;
+  font-weight: 300;
+  font-size: 12px;
   
+  margin-right: 850px;
+  position: absolute;
+  margin-top: 650px;
 
-#nightsky{
-    width: 10%;
-    height: 10vh;
-   
-    z-index: -1;
-    position: absolute;
-    clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+}
 
+
+.border {
+  border-image: linear-gradient(to right, #3acfd5 0%, #3a4ed5 100%) 1;
+  border-radius: 100px; /* this doesn't work */
+  border-width: 16px;
+  border-style: solid;
+  padding: 700px;
+}
+
+
+
+#archive1 {
+  width: 10vw;
+  height: 10vh;
+  position: absolute;
+  margin-top: 500px;
+  margin-right: 100px;
+  animation: fadeIn 2s infinite;
+  z-index: -1;
+}
+
+#archive2 {
+  width: 10vw;
+  height: 10vh;
+  position: absolute;
+  margin-top: 250px;
+  margin-right: 200px;
+  animation: fadeIn 2.5s infinite;
+  z-index: -1;
+}
+
+
+#archive3 {
+  width: 10vw;
+  height: 10vh;
+  position: absolute;
+  margin-top: 600px;
+  margin-left: 300px;
+  margin-right: 10px;
+  animation: fadeIn 1.75s infinite;
+  z-index: -1;
+}
+
+#archive4 {
+  width: 10vw;
+  height: 10vh;
+  position: absolute;
+  margin-top: 400px;
+  margin-left: 500px;
+  margin-right: 10px;
+  animation: fadeIn 3.25s infinite;
+  z-index: -1;
+}
+
+#archive5 {
+  width: 10vw;
+  height: 10vh;
+  position: absolute;
+  margin-top: 200px;
+  margin-left: 100px;
+  margin-right: 600px;
+  animation: fadeIn 1.8s infinite;
+  z-index: -1;
+}
+
+#archive6 {
+  width: 10vw;
+  height: 10vh;
+  position: absolute;
+  margin-top: 400px;
+  margin-left: 100px;
+  margin-right: 800px;
+  animation: fadeIn 2.6s infinite;
+  z-index: -1;
+}
+
+#archive7 {
+  width: 10vw;
+  height: 10vh;
+  position: absolute;
+  margin-top: 480px;
+  margin-left: 100px;
+  margin-right: 1200px;
+  animation: fadeIn 3.2s infinite;
+  z-index: -1;
+}
+
+
+#archive8 {
+  width: 10vw;
+  height: 10vh;
+  position: absolute;
+  margin-top: 50px;
+  margin-left: 100px;
+  margin-right: 1050px;
+  animation: fadeIn 2.9s infinite;
+  z-index: -1;
+}
+
+#archive9 {
+  width: 10vw;
+  height: 10vh;
+  position: absolute;
+  margin-top: 50px;
+  margin-left: 100px;
+  margin-left: 1050px;
+  animation: fadeIn 2.7s infinite;
+  z-index: -1;
+}
+
+#archive10 {
+  width: 10vw;
+  height: 10vh;
+  position: absolute;
+  margin-top: 500px;
+  margin-left: 100px;
+  margin-left: 1050px;
+  animation: fadeIn 2.6s infinite;
+  z-index: -1;
+}
+
+#archive11 {
+  width: 10vw;
+  height: 10vh;
+  position: absolute;
+  margin-top: 300px;
+  margin-left: 100px;
+  margin-left: 900px;
+  animation: fadeIn 1.89s infinite;
+  z-index: -1;
+}
+
+#archive12 {
+  width: 10vw;
+  height: 10vh;
+  position: absolute;
+  margin-top: 300px;
+  margin-left: 100px;
+  margin-left: 200px;
+ animation: fadeIn 3.3s infinite;
+  z-index: -1;
+}
+
+#archive13 {
+  width: 10vw;
+  height: 10vh;
+  position: absolute;
+  margin-top: 200px;
+  margin-left: 100px;
+  margin-left: 1100px;
+  animation: fadeIn 2.34s infinite;
+  z-index: -1;
+}
+
+#archive14 {
+  width: 10vw;
+  height: 10vh;
+  position: absolute;
+  margin-top: 250px;
+  margin-right: 900px;
+  animation: fadeIn 1.75s infinite;
+  z-index: -1;
+}
+
+#icons{
+  box-shadow: 5px 5px 5px #CC0066;
 }
